/// The accessibility ids this package attaches. Stable forever: deprecate, never rename.
export const UseSmileIDSampleTestIds = {
  // shell
  NAV_PRODUCTS: 'sample_nav_products',
  NAV_VERIFICATIONS: 'sample_nav_verifications',
  NAV_SETTINGS: 'sample_nav_settings',
  NAV_TOKEN: 'sample_nav_token',
  SCENARIO_DRAWER: 'sample_scenario_drawer',
  SCENARIO_DRAWER_BUTTON: 'sample_scenario_drawer_button',
  SCENARIO_ITEM: 'sample_scenario_item',
  THEME_ITEM: 'sample_theme_item',
  // products
...
  ENV_CHIP: 'sample_env_chip',
  PROFILE_AVATAR_BUTTON: 'sample_profile_avatar_button',
  PRODUCT_CARD: 'sample_product_card',
  SESSION_CARD: 'sample_session_card',
  SESSION_COUNTDOWN: 'sample_session_countdown',
  SESSION_ENDED_BANNER: 'sample_session_ended_banner',
  PROFILE_SWITCH_SHEET: 'sample_profile_switch_sheet',
  PROFILE_SWITCH_NEW: 'sample_profile_switch_new',
  // verifications
  VERIFICATIONS_SCREEN: 'sample_verifications_screen',
  FILTER_CHIP: 'sample_filter_chip',
  FILTER_COUNT: 'sample_filter_count',
  VERIFICATIONS_EMPTY: 'sample_verifications_empty',
  COUNTRY_EMPTY: 'sample_country_empty',
...
  SELECTION_BAR: 'sample_selection_bar',
  SELECTION_COUNT: 'sample_selection_count',
  SELECTION_REMOVE: 'sample_selection_remove',
  TOAST: 'sample_toast',
  TOAST_UNDO: 'sample_toast_undo',
  // verificationDetails
  VERIFICATION_DETAILS_SCREEN: 'sample_verification_details_screen',
  STATUS_BADGE: 'sample_status_badge',
  DETAIL_FIELD: 'sample_detail_field',
  DETAIL_COPY: 'sample_detail_copy',
  DETAILS_DELETE: 'sample_details_delete',
  DETAILS_EMPTY: 'sample_details_empty',
  DETAILS_REFRESH: 'sample_details_refresh',
  // userDetails
  USER_DETAILS_SCREEN: 'sample_user_details_screen',
  USER_DETAILS_FIELD: 'sample_user_details_field',
  USER_DETAILS_HINT: 'sample_user_details_hint',
  REMEMBER_DETAILS_SWITCH: 'sample_remember_details_switch',
  USER_DETAILS_PROFILE: 'sample_user_details_profile',
  USER_DETAILS_CONTINUE: 'sample_user_details_continue',
  AUTH_USER_ID_SCREEN: 'sample_auth_user_id_screen',
  AUTH_USER_ID_INPUT: 'sample_auth_user_id_input',
  AUTH_USER_ID_OPTION: 'sample_auth_user_id_option',
  AUTH_USER_ID_REGISTER: 'sample_auth_user_id_register',
  AUTH_USER_ID_CONTINUE: 'sample_auth_user_id_continue',
  // kyc
...
  COUNTRY_SEARCH: 'sample_country_search',
  COUNTRY_OPTION: 'sample_country_option',
  ID_TYPE_SHEET: 'sample_idtype_sheet',
  ID_TYPE_SEARCH: 'sample_idtype_search',
  ID_TYPE_OPTION: 'sample_idtype_option',
  // settings
  SETTINGS_SCREEN: 'sample_settings_screen',
  PROFILE_SUMMARY: 'sample_profile_summary',
  SETTING_ENHANCED_SMART_SELFIE: 'sample_setting_enhanced_smart_selfie',
  SETTING_AGENT_MODE: 'sample_setting_agent_mode',
  SETTING_APPEARANCE: 'sample_setting_appearance',
  APPEARANCE_SHEET: 'sample_appearance_sheet',
  SETTING_LANGUAGE: 'sample_setting_language',
  LANGUAGE_SHEET: 'sample_language_sheet',
...
  LICENSE_TEXT: 'sample_license_text',
  LICENSE_LINK: 'sample_license_link',
  SIGN_OUT: 'sample_sign_out',
  SIGN_OUT_CONFIRM: 'sample_sign_out_confirm',
  VERSION_LABEL: 'sample_version_label',
  // profiles
  PROFILES_SCREEN: 'sample_profiles_screen',
  PROFILE_ROW: 'sample_profile_row',
  CREATE_PROFILE: 'sample_create_profile',
  NEW_PROFILE_SHEET: 'sample_new_profile_sheet',
  NEW_PROFILE_NAME: 'sample_new_profile_name',
  NEW_PROFILE_FIRST_NAME: 'sample_new_profile_first_name',
  NEW_PROFILE_LAST_NAME: 'sample_new_profile_last_name',
  NEW_PROFILE_EMAIL: 'sample_new_profile_email',
  NEW_PROFILE_PHONE: 'sample_new_profile_phone',
  NEW_PROFILE_SAVE: 'sample_new_profile_save',
  PROFILE_CONFIG_SCREEN: 'sample_profile_config_screen',
  PROFILE_CONFIG_FIELD: 'sample_profile_config_field',
  PROFILE_CONFIG_CALLBACK_URL: 'sample_profile_config_callback_url',
  PROFILE_CONFIG_SAVE: 'sample_profile_config_save',
  PROFILE_CONFIG_CONTACT_ERROR: 'sample_profile_config_contact_error',
  PROFILE_CONFIG_NAME: 'sample_profile_config_name',
  PROFILE_CONFIG_DELETE: 'sample_profile_config_delete',
  PROFILE_DELETE_CONFIRM: 'sample_profile_delete_confirm',
  // token
  SCAN_TOKEN_SCREEN: 'sample_scan_token_screen',
...
